[package]
name = "wraft"
version = "0.1.0"
authors = ["Emanuel Evans <me@eevans.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
yenta_types = { git = "ssh://gitea.eevans.me/shosti/yenta_types.git" }
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4"
anyhow = "1.0"
async-channel = "1.6"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Document",
  "Element",
  "Event",
  "HtmlButtonElement",
  "HtmlInputElement",
  "Location",
  "MessageEvent",
  "RtcPeerConnection",
  "RtcSignalingState",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcPeerConnectionIceEvent",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
