[package]
name = "webrtc-introducer-types"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shosti/wraft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
