[package]
name = "webrtc-introducer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.15"
futures = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
webrtc-introducer-types = { path = "../webrtc-introducer-types" }
http = "0.2"
