[package]
name = "webrtc-introducer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shosti/wraft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.13", features = ["macros", "net", "rt-multi-thread", "sync", "time", "signal"] }
tokio-tungstenite = "0.15"
futures = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
webrtc-introducer-types = { path = "../webrtc-introducer-types" }
http = "0.2"
