[package]
name = "wraft"
version = "0.1.0"
authors = ["Emanuel Evans <me@eevans.co>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
webrtc-introducer-types = { path = "../webrtc-introducer-types" }
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4"
async-trait = "0.1"
rand = "0.8"
base64 = "0.13"
yew = "0.18"
yew-router = "0.15"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Document",
  "DomException",
  "Element",
  "Event",
  "HtmlButtonElement",
  "HtmlFormElement",
  "HtmlInputElement",
  "Location",
  "MessageEvent",
  "Performance",
  "RtcDataChannel",
  "RtcDataChannelEvent",
  "RtcDataChannelState",
  "RtcDataChannelType",
  "RtcIceCandidate",
  "RtcIceCandidateInit",
  "RtcIceConnectionState",
  "RtcPeerConnection",
  "RtcPeerConnectionIceEvent",
  "RtcSdpType",
  "RtcSessionDescriptionInit",
  "RtcSignalingState",
  "Storage",
  "WebSocket",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
